--- a/.gitignore
+++ b/.gitignore
@@ -73,9 +73,9 @@ local.properties
 
 ### Eclipse Patch ###
 # Eclipse Core		
-.project
+#.project
 
 # JDT-specific (Eclipse Java Development Tools)		
-.classpath
+#.classpath
 
 # End of https://www.gitignore.io/api/eclipse
