--- a/TfunI_GUI2/.classpath
+++ b/TfunI_GUI2/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/commons-math3-3.6/commons-math3-3.6-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/commons-math3-3.6/commons-math3-3.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
