--- a/.gitignore
+++ b/.gitignore
@@ -78,4 +78,5 @@ local.properties
 # JDT-specific (Eclipse Java Development Tools)		
 #.classpath
 
-# End of https://www.gitignore.io/api/eclipse
+# End of https://www.gitignore.io/api/
+!lib/
